[package]
authors = ["Tim-Paik <timpaik@163.com>"]
description = "FRFS: File-based Read-only File System"
documentation = "https://docs.rs/frfs"
edition = "2021"
license = "MPL2"
name = "frfs"
repository = "https://github.com/Tim-Paik/FRFS"
version = "0.1.1"

[dependencies]
bincode = "1.3"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2"
thiserror = "1.0"
vfs = { version = "0.8.0", optional = true }

[features]
frfs_vfs = ["vfs"]
