[package]
authors = ["Tim-Paik <timpaik@163.com>"]
description = "FRFS: File-based Read-only File System"
documentation = "https://docs.rs/frfs"
edition = "2021"
license = "MPL2"
name = "frfs"
repository = "https://github.com/Tim-Paik/FRFS"
version = "0.2.0"

[dependencies]
anyhow = { version = "1.0", optional = true }
argh = { version = "0.1", optional = true }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
vfs = { version = "0.8.0", optional = true }

[[example]]
name = "vfs"
required-features = ["vfs"]

[features]
bin = ["anyhow", "argh"]
